added reset-user, and time set for test portal

--- a/portal/templates/portal/test.html
+++ b/portal/templates/portal/test.html
@@ -35,7 +35,7 @@
                 }, 1000);
             }
             
-            var fiveMinutes = 60 * 0.5,
+            var fiveMinutes = 60,
                 display = document.querySelector('#time');
             startTimer(fiveMinutes, display);
           </script>
