--- a/portal/templates/portal/admin.html
+++ b/portal/templates/portal/admin.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load static %}
+{% load custom_filters %}
 
 {% block title %}Sokalp - Admin Panel{% endblock title %}
 
@@ -7,6 +9,8 @@
 {% endblock styles %}
 
 {% block content %}
+  <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
+
   <center>
     <h1>Admin Panel</h1>
 
@@ -16,27 +20,27 @@
           <th>ID</th>
           <th>Name</th>
           <th>Number of questions</th>
-          <th>Add Users</th>
+          <th>Change Time</th>
           <th>User Info</th>
           <th>Edit Tests</th>
         </tr>
       </thead>
       <tbody>
         {% for test in tests %}
-          <tr>
-            <td>{{ test.id }}</td>
-            <td>{{ test.test_name }}</td>
-            <td>{{ test.test_question_no }}</td>
-            <td>
-              <button class='btn btn-primary'>Add Users</button>
-            </td>
-            <td>
-              <a class='btn btn-primary' href='{% url "user-details" test.id %}'>See User Info</a>
-            </td>
-            <td>
-              <a class='btn btn-primary' href='{% url "edit-test" test.id %}'>Edit Test</a>
-            </td>
-          </tr>
+            <tr>
+              <td>{{ test.id }}</td>
+              <td>{{ test.test_name }}</td>
+              <td>{{ test.test_question_no }}</td>
+              <td>
+                <input type="time" step="1" name="time-test" class='time-test' data-mydata="{{test.id}}" value='{{ test.id|time }}'>
+              </td>
+              <td>
+                <a class='btn btn-primary' href='{% url "user-details" test.id %}'>See User Info</a>
+              </td>
+              <td>
+                <a class='btn btn-primary' href='{% url "edit-test" test.id %}'>Edit Test</a>
+              </td>
+            </tr>
         {% endfor %}
       </tbody>
     </table>
@@ -44,6 +48,8 @@
     <button class='btn btn-success mb-3' data-bs-toggle="modal" data-bs-target="#reg-modal">Create Test</button> <br>
     <a href='{% url "logout" %}' class='btn btn-danger'>Logout</a>
   </center>
+
+  <script src='{% static "portal/admin.js" %}'></script>
 
   <div class="modal fade" id="reg-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
     <div class="modal-dialog">
@@ -67,4 +73,5 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-{% endblock content %}
+
+  {% endblock content %}
