--- a/portal/templates/portal/user-details.html
+++ b/portal/templates/portal/user-details.html
@@ -28,5 +28,6 @@
         {% endfor %}
       </tbody>
     </table>
+    <button class='btn btn-primary'>Add Users</button>
   </center>
 {% endblock content %}
