time remaining fix

--- a/portal/templates/portal/edit-test.html
+++ b/portal/templates/portal/edit-test.html
@@ -91,6 +91,7 @@
     </table>
 
     <button class='btn btn-success' data-bs-toggle="modal" data-bs-target="#reg-modal">Add Question</button>
+    <button class='btn btn-success'>Add Questions from Excel</button>
   </center>
 
   <div class="modal fade" id="reg-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
