added spinner while data is being fetched
added questions wioth excel functionality

--- a/portal/static/portal/err1.css
+++ b/portal/static/portal/err1.css
@@ -57,6 +57,7 @@ h1 {
 .btn {
     padding: 10px;
     border-radius: 6px;
+    transition: all 0.1s;
 }
 
 .btn-cwm {
@@ -71,6 +72,7 @@ h1 {
     border-width: 0.5px;
     display: block;
     text-align: center;
+    transition: all 0.1s;
 }
 
 .btn-cwm:hover {
