--- a/portal/static/portal/login.css
+++ b/portal/static/portal/login.css
@@ -24,6 +24,7 @@ input{
   border-color: #dfe6ed;
   border-radius: 5px;
   border-width: 0.5px;
+  transition: all 0.1s;
 }
 
 input:hover{
@@ -75,10 +76,15 @@ h1{
   color: #fff;
   font-size: 16px;
   font-weight: 550;
+  transition: all 0.1s;
 }
 
 .btn-sign-in:hover {
-  background-color: #cb743d;
+  background-color: #e58344;
+}
+
+.btn-sign-in:active {
+  background-color: #cb743d;;
 }
 
 .or{
@@ -110,6 +116,7 @@ h1{
 .btn{
   padding: 12px;
   border-radius: 6px;
+  transition: all 0.1s;
 }
 
 .forgot-password{
@@ -128,6 +135,7 @@ h1{
   font-weight: 600;
   font-size: 16px;
   border-width: 0.5px;
+  transition: all 0.1s;
 }
 
 .btn-cwm:hover{
@@ -145,6 +153,7 @@ h1{
   font-weight: 600;
   border-width: 0.5px;
   font-size: 16px;
+  transition: all 0.1s;
 }
 
 .btn-sign-up:hover{
