--- a/portal/static/portal/test-style.css
+++ b/portal/static/portal/test-style.css
@@ -65,6 +65,7 @@ body {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
   overflow-x: auto;
   max-height: 400px;
+  transition: all 0.1s;
 }
 
 .pallette-div button {
@@ -73,6 +74,7 @@ body {
   display: block;
   margin: 0 auto;
   margin-top: 15px;
+  transition: all 0.1s;
 }
 
 .pallette-div button:hover {
@@ -108,6 +110,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.1s;
 }
 .individual-question:hover {
   border-color: #fe914c;
@@ -118,6 +121,7 @@ body {
   background-color: #ff4857;
   color: #fff;
   border: none;
+  transition: all 0.1s;
 }
 
 .not-answered:hover {
@@ -134,6 +138,7 @@ body {
   background-color: #7bd669;
   color: #fff;
   border: none;
+  transition: all 0.1s;
 }
 .answered:hover {
   background-color: #71cb5f;
@@ -145,6 +150,7 @@ body {
   background-color: #65b555;
   color: #fff;
   border: none;
+  transition: all 0.1s;
 }
 
 .question-number {
@@ -184,6 +190,7 @@ body {
   /* border-width: 0.5px; */
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.03);
   margin-top: 25px;
+  transition: all 0.1s;
 }
 
 .saveandnext:disabled {
