--- a/portal/static/portal/user-style.css
+++ b/portal/static/portal/user-style.css
@@ -47,6 +47,7 @@ body {
 .btn {
   padding: 12px;
   border-radius: 6px;
+  transition: all 0.1s;
 }
 
 .btn:hover {
@@ -66,6 +67,7 @@ body {
   font-weight: 550;
   width: 115px;
   text-decoration: none;
+  transition: all 0.1s;
 }
 
 .btn-start-test:hover {
@@ -86,6 +88,7 @@ body {
   font-size: 16px;
   border-width: 0.5px;
   text-decoration: none;
+  transition: all 0.1s;
 }
 
 .btn-logout:hover {
