--- a/portal/templates/portal/admin.html
+++ b/portal/templates/portal/admin.html
@@ -6,9 +6,38 @@
 
 {% block styles %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+<style>
+  .spinner-wrapper {
+    background-color: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    z-index:9999;
+    display: flex;
+    justify-content: center;
+  }
+
+  .spinner-border {
+    height: 60px;
+    width: 60px;
+    margin-top: 30vh;
+  }
+
+</style>
+
 {% endblock styles %}
 
 {% block content %}
+
+  <div class="spinner-wrapper" style='display: none'>
+    <div class="spinner-border text-primary" role='status'>
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+
   <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
 
   <center>
