--- a/portal/static/portal/test-style.css
+++ b/portal/static/portal/test-style.css
@@ -33,6 +33,7 @@ body {
   border-radius: 8px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
   flex-wrap: wrap;
+  overflow-wrap: break-word;
 }
 
 .question-div [type="radio"] {
@@ -48,7 +49,14 @@ body {
   margin-bottom: 20px;
   gap: 12px;
   flex-wrap: wrap;
+  overflow-wrap: break-word;
 }
+
+.op-div div{
+  display: inline-block;
+  overflow-wrap: break-word;
+}
+
 
 .pallette-div {
   background-color: #fff;
