--- a/portal/templates/portal/edit-test.html
+++ b/portal/templates/portal/edit-test.html
@@ -12,9 +12,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 <script>
+
+  const escapeHtml = (unsafe) => {
+    return unsafe.replaceAll('&', '&amp;').replaceAll('<', '&lt;').replaceAll('>', '&gt;').replaceAll('"', '&quot;').replaceAll("'", '&#039;');
+  }
   
   function handlePre(question, isCode){
-    document.getElementById('modal-body-pre').innerHTML = question;
+    document.getElementById('modal-body-pre').innerHTML = escapeHtml(question);
 
     if(isCode == 'True'){
       document.getElementById('modal-body-pre').classList.add('prettyprint')
@@ -73,7 +77,7 @@
             </td>
             
             <td>
-              <pre {% if question.op4IsCode %} class="prettyprint" style='border-style:none'{% endif %} id='op4_{{ question.id }}' ondblclick='handlePre(`{{question.op4}}`, "question.op4IsCode")'>
+              <pre {% if question.op4IsCode %} class="prettyprint" style='border-style:none'{% endif %} id='op4_{{ question.id }}' ondblclick='handlePre(`{{question.op4}}`, "{{question.op4IsCode}}")'>
                 {{ question.op4|linebreaks|truncatechars:100 }}
               </pre>
             </td>
@@ -89,6 +93,16 @@
         {% endfor %}
       </tbody>
     </table>
+    
+    {% if is_form_invalid %}
+      <p 
+      style='font-size: 12px;
+      font-weight: 600;
+      color: #ff4857;'
+      >
+        Correct errors and try again!
+    </p>
+    {% endif %}
 
     <button class='btn btn-success' data-bs-toggle="modal" data-bs-target="#reg-modal">Add Question</button>
     <form action="{% url 'upload-questions' tests.id %}" method="POST" enctype="multipart/form-data">
@@ -105,62 +119,72 @@
           <h5 class="modal-title" id="modal-title">Add a Question</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <form action="{% url 'create-question' tests.id %}" method="post">
+        <form method="post">
           {% csrf_token %}
           <div class="modal-body">
 
             <div class="form-floating mb-3">
-              <textarea name='question' class="form-control" placeholder="Enter the Question" id="floatingTextarea"></textarea>
+              {{form.question}}
+              {% comment %} <textarea name='question' class="form-control" placeholder="Enter the Question" id="floatingTextarea"></textarea> {% endcomment %}
               <label for="floatingTextarea">Question</label>
             </div>
 
             <div class="mb-3 ms-4">
-              <input name='checks[]' value='question' type="checkbox" id="floatingInput" placeholder="Enter 0 or 1">
+              {{form.questionIsCode}}
+              {% comment %} <input name='checks[]' value='question' type="checkbox" id="floatingInput" placeholder="Enter 0 or 1"> {% endcomment %}
               <label for="floatingInput">Syntax Highlighting</label>
             </div>
 
             <div class="form-floating mb-3">
-              <textarea name='op1' class="form-control" placeholder="Enter the Option 1" id="floatingTextarea"></textarea>
+              {{form.op1}}
+              {% comment %} <textarea name='op1' class="form-control" placeholder="Enter the Option 1" id="floatingTextarea"></textarea> {% endcomment %}
               <label for="floatingTextarea">Option 1</label>
             </div>
 
             <div class="mb-3 ms-4">    
-              <input name='checks[]' value='op1' type="checkbox" id="op1IsCode" placeholder="Enter 0 or 1">
+              {{form.op1IsCode}}
+              {% comment %} <input name='checks[]' value='op1' type="checkbox" id="op1IsCode" placeholder="Enter 0 or 1"> {% endcomment %}
               <label for="op1IsCode">Syntax Highlighting</label>
             </div>
 
             <div class="form-floating mb-3">
-              <textarea name='op2' class="form-control" placeholder="Enter the Option 2" id="floatingTextarea"></textarea>
+              {{form.op2}}
+              {% comment %} <textarea name='op2' class="form-control" placeholder="Enter the Option 2" id="floatingTextarea"></textarea> {% endcomment %}
               <label for="floatingTextarea">Option 2</label>
             </div>
 
             <div class="mb-3 ms-4">
-              <input name='checks[]' value='op2' type="checkbox" id="op2IsCode" placeholder="Enter 0 or 1">
+              {{form.op2IsCode}}
+              {% comment %} <input name='checks[]' value='op2' type="checkbox" id="op2IsCode" placeholder="Enter 0 or 1"> {% endcomment %}
               <label for="op2IsCode">Syntax Highlighting.</label>
             </div>
 
             <div class="form-floating mb-3">
-              <textarea name='op3' class="form-control" placeholder="Enter the Option 3" id="floatingTextarea"></textarea>
+              {{form.op3}}
+              {% comment %} <textarea name='op3' class="form-control" placeholder="Enter the Option 3" id="floatingTextarea"></textarea> {% endcomment %}
               <label for="floatingTextarea">Option 3</label>
             </div>
             
             <div class="mb-3 ms-4">
-              <input name='checks[]' value='op3' type="checkbox" id="op3IsCode" placeholder="Enter 0 or 1">
+              {{form.op3IsCode}}
+              {% comment %} <input name='checks[]' value='op3' type="checkbox" id="op3IsCode" placeholder="Enter 0 or 1"> {% endcomment %}
               <label for="op3IsCode">Syntax Highlighting</label>
             </div>
 
             <div class="form-floating mb-3">
-              <textarea name='op4' class="form-control" placeholder="Enter the Option 4" id="floatingTextarea"></textarea>
+              {{form.op4}}
+              {% comment %} <textarea name='op4' class="form-control" placeholder="Enter the Option 4" id="floatingTextarea"></textarea> {% endcomment %}
               <label for="floatingTextarea">Option 4</label>
             </div>
             
             <div class='mb-3 ms-4'>
-              <input name='checks[]' value='op4' type="checkbox" id="op4IsCode" placeholder="Enter 0 or 1">
+              {{form.op4IsCode}}
+              {% comment %} <input name='checks[]' value='op4' type="checkbox" id="op4IsCode" placeholder="Enter 0 or 1"> {% endcomment %}
               <label for="op4IsCode">Syntax Highlighting</label>
             </div>
 
             <div class="form-floating mb-3">
-              <input name='correct_op' type="number" class="form-control" id="floatingInput" placeholder="Enter 1, 2, 3 or 4">
+              {{form.correct_op}}
               <label for="floatingInput">Correct Option</label>
             </div>
 
