added successful submit page

--- a/portal/static/portal/test-style.css
+++ b/portal/static/portal/test-style.css
@@ -57,6 +57,10 @@ body {
   text-wrap: break-word;
 }
 
+.op-div label{
+  word-wrap: break-word;
+}
+
 
 .pallette-div {
   background-color: #fff;
