--- a/portal/templates/portal/test.html
+++ b/portal/templates/portal/test.html
@@ -75,7 +75,11 @@
 
       <div class='op-div'>
         <input type="radio" name="answer" value="op1" id="op1-r" />
-        <label id='op1' for="op1-r">Option 1</label>
+        <label id='op1' for="op1-r">
+          <div class='op-div-under'>
+            Option 1
+          </div>
+        </label>
       </div>
 
       <div class="op-div">
