--- a/portal/templates/portal/admin_2.html
+++ b/portal/templates/portal/admin_2.html
@@ -184,7 +184,7 @@
         </div>
         <div class="grid grid-cols-1 mx-8 gap-3 mt-4 mb-4 md:grid-cols-2">
           {% for test in tests %}
-            <a href="{% url 'edit-test' test.id %}">
+            <a href="{% url 'basic-settings' test.id %}">
               <div class="bg-white p-3 rounded-lg hover:shadow-md active:shadow-sm flex flex-col self-start">
                 <div class="flex justify-between items-center">
                   <div class="flex gap-3 mt-3 ml-3 items-center">
