--- a/portal/templates/portal/test-settings/basic-settings.html
+++ b/portal/templates/portal/test-settings/basic-settings.html
@@ -5,6 +5,7 @@
   <head>
     <title>Sokalp - Basic settings</title>
     <link rel="stylesheet" href="{% static 'portal/basic-settings.css' %}" />
+    <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
   </head>
   <body class="bg-slate-100 tracking-wide leading-4 w-screen">
     <div
@@ -252,7 +253,8 @@
             </li>
           </ul>
         </div>
-        <div class="mt-2 px-[8px] flex-grow flex flex-col gap-6 mr-4">
+        <form method='POST' class="mt-2 px-[8px] flex-grow flex flex-col gap-6 mr-4">
+          {% csrf_token %}
           <h1 class="font-semibold text-[18px] mb-4">Basic settings</h1>
 
           <div class="bg-white p-5 rounded-md flex-1 flex flex-col gap-3">
@@ -264,32 +266,22 @@
               class="text-slate-400 leading-2 font-semibold mb-1"
               >Test name</label
             >
-            <input
-              type="text"
-              class="border-b-2 mb-4 text-[17px] hover:border-slate-500 focus:border-orange-400 outline-none text-slate-500"
-              name="test-name"
-              id="test-name"
-              value="{{tests.test_name}}"
-            />
+            {{form.test_name}}
 
             <label
               for="test-instructions"
               class="text-slate-400 text-[16px] leading-2 font-semibold mb-1"
               >Instructions for users</label
             >
-            <textarea
-              type="text"
-              class="border-2 rounded-md focus:outline-orange-400 mb-4 text-[17px] p-4 outline-1 hover:border-slate-500 text-slate-500"
-              name="test-instructions"
-              id="test-instructions"
-            >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio nam nihil saepe tenetur unde a quos repudiandae quibusdam adipisci corporis.</textarea>
+            {{form.instruction}}
           </div>
           <button
+              type='submit'
               class="bg-orange-400 w-20 inline-block text-white px-4 py-[12px] font-semibold text-[18px] rounded-lg border-2 hover:bg-orange-500"
             >
               Save
             </button>
-        </div>
+          </form>
       </div>
     </div>
   </body>
