--- a/portal/templates/portal/test-settings/time-settings.html
+++ b/portal/templates/portal/test-settings/time-settings.html
@@ -6,6 +6,7 @@
   <head>
     <title>Sokalp - Time settings</title>
     <link rel="stylesheet" href="{% static 'portal/time-settings.css' %}" />
+    <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
   </head>
   <body class="bg-slate-100 tracking-wide leading-4 w-screen">
     {% csrf_token %}
@@ -43,7 +44,7 @@
         class="bg-white p-6 shadow-md fixed top-0 left-0 w-[80px] h-screen flex flex-col items-center justify-between"
       >
         <div class="flex items-center flex-col w-[44px]">
-          <a href="./test-ind.html">
+          <a href="{% url 'admin' %}">
             <img src="{% static 'portal/sokalp-logo.png' %}" class="h-auto" alt="" />
           </a>
           <button class="flex items-center gap-3 font-semibold mt-10">
@@ -122,8 +123,9 @@
             </svg>
           </button>
         </div>
-        <button
+        <a
           class="flex items-center gap-3 text-gray-500 hover:text-red-500 font-semibold"
+          href='{% url "logout" %}'
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -139,7 +141,7 @@
               d="M7.5 7.5h-.75A2.25 2.25 0 0 0 4.5 9.75v7.5a2.25 2.25 0 0 0 2.25 2.25h7.5a2.25 2.25 0 0 0 2.25-2.25v-7.5a2.25 2.25 0 0 0-2.25-2.25h-.75m-6 3.75 3 3m0 0 3-3m-3 3V1.5m6 9h.75a2.25 2.25 0 0 1 2.25 2.25v7.5a2.25 2.25 0 0 1-2.25 2.25h-7.5a2.25 2.25 0 0 1-2.25-2.25v-.75"
             />
           </svg>
-        </button>
+        </a>
       </div>
       <div class="flex mt-7 items-baseline gap-6 w-screen">
         <div class="ml-[96px] mt-2 flex flex-col gap-6 w-[260px]">
@@ -150,7 +152,7 @@
           <h1 class="font-bold text-[18px]">Test configuration</h1>
           <ul class="list-none">
             <li>
-              <a href="{% url 'edit-test' test.id %}">
+              <a href="{% url 'basic-settings' test.id %}">
                 <div class="p-3 flex items-center group hover:bg-white gap-3">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -266,7 +268,7 @@
               class="text-black leading-2 font-normal text-base mb-1"
               >Time to complete the test: (hh:mm:ss)</label
             >
-            <input type="time" step="1" name="time-test" id='time-test' class='time-test border-b-2 mb-4 text-[17px] hover:border-slate-500 focus:border-orange-400 outline-none text-slate-500' data-mydata="{{test.id}}" value='{{ test.id|time }}'>
+            <input type="time" style='accent-color:#fb923c;' step="1" name="time-test" id='time-test' class='time-test border-b-2 mb-4 text-[17px] hover:border-slate-500 focus:border-orange-400 outline-none text-slate-500' data-mydata="{{test.id}}" value='{{ test.id|time }}'>
             {% comment %} <input
               type="time"
               class="border-b-2 mb-4 text-[17px] hover:border-slate-500 focus:border-orange-400 outline-none text-slate-500"
