added a temporary question manager

--- a/portal/templates/portal/edit-test.html
+++ b/portal/templates/portal/edit-test.html
@@ -34,7 +34,7 @@
 {% endblock scripts %}
 
 {% block content %}
-  <a href="{% url 'admin' %}"><-- Back</a>
+  <a href="{% url 'basic-settings' tests.id %}"><-- Back</a>
   <center>
     <h1>{{ tests.test_name }}</h1>
     <br>
