--- a/portal/templates/portal/test-settings/basic-settings.html
+++ b/portal/templates/portal/test-settings/basic-settings.html
@@ -45,14 +45,14 @@
           <a href="{% url 'admin' %}">
             <img src="{% static 'portal/sokalp-logo.png' %}" class="h-auto" alt="" />
           </a>
-          <button class="flex items-center gap-3 font-semibold mt-10">
+          <a href="{% url 'admin' %}" class="flex items-center hover:stroke-orange-400 gap-3 font-semibold mt-10">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-              class="w-6 h-6"
+              class="w-6 h-6 stroke-slate-500"
             >
               <path
                 stroke-linecap="round"
@@ -60,7 +60,7 @@
                 d="M6 6.878V6a2.25 2.25 0 0 1 2.25-2.25h7.5A2.25 2.25 0 0 1 18 6v.878m-12 0c.235-.083.487-.128.75-.128h10.5c.263 0 .515.045.75.128m-12 0A2.25 2.25 0 0 0 4.5 9v.878m13.5-3A2.25 2.25 0 0 1 19.5 9v.878m0 0a2.246 2.246 0 0 0-.75-.128H5.25c-.263 0-.515.045-.75.128m15 0A2.25 2.25 0 0 1 21 12v6a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 18v-6c0-.98.626-1.813 1.5-2.122"
               />
             </svg>
-          </button>
+          </a>
           <button
             class="flex items-center gap-3 hover:text-orange-400 text-gray-500 font-semibold mt-10"
           >
@@ -175,29 +175,31 @@
               </div>
             </li>
             <li>
-              <div
-                class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="w-6 h-6 stroke-slate-500 group-hover:stroke-orange-400"
+              <a href="{% url 'edit-test' tests.id %}">
+                <div
+                  class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
-                  />
-                </svg>
-                <p
-                  class="text-[14px] text-slate-500 group-hover:text-black font-semibold"
-                >
-                  Questions manager
-                </p>
-              </div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6 stroke-slate-500 group-hover:stroke-orange-400"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
+                    />
+                  </svg>
+                  <p
+                    class="text-[14px] text-slate-500 group-hover:text-black font-semibold"
+                  >
+                    Questions manager
+                  </p>
+                </div>
+              </a>
             </li>
             <li>
               <a href="{% url 'time-settings' tests.id %}">
