--- a/portal/templates/portal/test-settings/time-settings.html
+++ b/portal/templates/portal/test-settings/time-settings.html
@@ -9,7 +9,32 @@
     <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
   </head>
   <body class="bg-slate-100 tracking-wide leading-4 w-screen">
+    <div class="spinner-wrapper" style='display: none'>
+      <div class="spinner-border text-primary" role='status'>
+        <span class="visually-hidden" style='color:white; font-size:18px'>Chaning Time...</span>
+      </div>
+    </div>
     {% csrf_token %}
+    <style>
+      .spinner-wrapper {
+        background-color: rgba(0, 0, 0, 0.3);
+        position: fixed;
+        top: 0;
+        left:0;
+        width: 100%;
+        height: 100%;
+        z-index:9999;
+        display: flex;
+        justify-content: center;
+      }
+    
+      .spinner-border {
+        height: 60px;
+        width: 60px;
+        margin-top: 30vh;
+      }
+    
+    </style>
     <div
       class="upper-nav-bar ml-[80px] bg-white flex justify-between items-center"
     >
@@ -182,29 +207,31 @@
               </a>
             </li>
             <li>
-              <div
-                class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="w-6 h-6 stroke-slate-500 group-hover:stroke-orange-400"
+              <a href="{% url 'edit-test' test.id %}">
+                <div
+                  class="p-3 flex items-center gap-3 rounded-md group hover:bg-white"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
-                  />
-                </svg>
-                <p
-                  class="text-[14px] text-slate-500 group-hover:text-black font-semibold"
-                >
-                  Questions manager
-                </p>
-              </div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6 stroke-slate-500 group-hover:stroke-orange-400"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
+                    />
+                  </svg>
+                  <p
+                    class="text-[14px] text-slate-500 group-hover:text-black font-semibold"
+                  >
+                    Questions manager
+                  </p>
+                </div>
+              </a>
             </li>
             <li>
               <div
