--- a/portal/templates/portal/admin_2.html
+++ b/portal/templates/portal/admin_2.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title>Sokalp - Admin Panel</title>
-    <link rel="stylesheet" href="{% static 'portal/basic-settings.css' %}"/>
+    <link rel="stylesheet" href="{% static 'portal/admin-style.css' %}"/>
     <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
   </head>
   <body class="bg-slate-100 tracking-wide leading-4">
