--- a/portal/static/portal/add-question.css
+++ b/portal/static/portal/add-question.css
@@ -601,10 +601,6 @@ video {
   margin-right: 1rem;
 }
 
-.mr-44 {
-  margin-right: 11rem;
-}
-
 .mr-6 {
   margin-right: 1.5rem;
 }
@@ -629,6 +625,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .mt-7 {
   margin-top: 1.75rem;
 }
@@ -641,64 +641,28 @@ video {
   margin-top: 23px;
 }
 
-.ml-4 {
-  margin-left: 1rem;
+.mt-\[14px\] {
+  margin-top: 14px;
 }
 
-.ml-44 {
-  margin-left: 11rem;
+.mt-\[49px\] {
+  margin-top: 49px;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
+.mt-\[24px\] {
+  margin-top: 24px;
 }
 
-.ml-8 {
-  margin-left: 2rem;
+.mt-\[18px\] {
+  margin-top: 18px;
 }
 
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.ml-12 {
-  margin-left: 3rem;
-}
-
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.ml-14 {
-  margin-left: 3.5rem;
-}
-
-.ml-16 {
-  margin-left: 4rem;
-}
-
-.ml-20 {
-  margin-left: 5rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mt-\[22px\] {
+  margin-top: 22px;
 }
 
 .mr-8 {
   margin-right: 2rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
 }
 
 .inline-block {
@@ -782,12 +746,20 @@ video {
   width: 100vw;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .w-5 {
   width: 1.25rem;
 }
 
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .flex-grow {
@@ -810,6 +782,10 @@ video {
   align-items: flex-start;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
 }
@@ -818,20 +794,8 @@ video {
   align-items: baseline;
 }
 
-.items-stretch {
-  align-items: stretch;
-}
-
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
 }
 
 .gap-2 {
@@ -854,60 +818,16 @@ video {
   gap: 1.25rem;
 }
 
-.gap-1 {
-  gap: 0.25rem;
-}
-
 .gap-10 {
   gap: 2.5rem;
 }
 
-.gap-0 {
-  gap: 0px;
-}
-
-.gap-0\.5 {
-  gap: 0.125rem;
-}
-
-.gap-\[2px\] {
-  gap: 2px;
-}
-
-.gap-\[1px\] {
-  gap: 1px;
-}
-
-.gap-\[0\.25px\] {
-  gap: 0.25px;
-}
-
-.gap-\[0\.05px\] {
-  gap: 0.05px;
-}
-
-.gap-\[0px\] {
-  gap: 0px;
-}
-
-.gap-\[0\.1px\] {
-  gap: 0.1px;
-}
-
-.gap-\[3px\] {
-  gap: 3px;
-}
-
-.gap-\[1\.25px\] {
-  gap: 1.25px;
+.gap-12 {
+  gap: 3rem;
 }
 
 .self-start {
   align-self: flex-start;
-}
-
-.break-words {
-  overflow-wrap: break-word;
 }
 
 .rounded-lg {
@@ -918,28 +838,8 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
-.rounded-tl-none {
-  border-top-left-radius: 0px;
-}
-
-.rounded-bl-none {
-  border-bottom-left-radius: 0px;
-}
-
-.rounded-br {
-  border-bottom-right-radius: 0.25rem;
-}
-
-.rounded-tr-none {
-  border-top-right-radius: 0px;
-}
-
-.rounded-br-none {
-  border-bottom-right-radius: 0px;
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .border-2 {
@@ -970,41 +870,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-slate-800 {
+.bg-slate-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
-.bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-
-.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.bg-opacity-10 {
-  --tw-bg-opacity: 0.1;
-}
-
-.bg-opacity-20 {
-  --tw-bg-opacity: 0.2;
-}
-
-.bg-opacity-25 {
-  --tw-bg-opacity: 0.25;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .stroke-orange-400 {
@@ -1031,6 +899,26 @@ video {
   padding: 1.5rem;
 }
 
+.p-12 {
+  padding: 3rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-0 {
+  padding: 0px;
+}
+
+.p-0\.5 {
+  padding: 0.125rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1039,6 +927,11 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-\[44px\] {
+  padding-left: 44px;
+  padding-right: 44px;
 }
 
 .px-\[8px\] {
@@ -1061,22 +954,13 @@ video {
   padding-bottom: 6px;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.px-\[120px\] {
+  padding-left: 120px;
+  padding-right: 120px;
 }
 
 .pl-1 {
   padding-left: 0.25rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
 }
 
 .text-\[12\.5px\] {
@@ -1121,6 +1005,10 @@ video {
   line-height: 1.75rem;
 }
 
+.text-\[24px\] {
+  font-size: 24px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1131,6 +1019,10 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .leading-4 {
@@ -1224,14 +1116,6 @@ video {
   border-radius: 0.5rem;
 }
 
-.hover\:rounded-sm:hover {
-  border-radius: 0.125rem;
-}
-
-.hover\:rounded-md:hover {
-  border-radius: 0.375rem;
-}
-
 .hover\:border-orange-400:hover {
   --tw-border-opacity: 1;
   border-color: rgb(251 146 60 / var(--tw-border-opacity));
@@ -1260,6 +1144,20 @@ video {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-slate-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-slate-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+
+.hover\:p-2:hover {
+  padding: 0.5rem;
 }
 
 .hover\:text-orange-400:hover {
