added add new test option

--- a/portal/templates/portal/admin_2.html
+++ b/portal/templates/portal/admin_2.html
@@ -129,11 +129,13 @@
             >
               Import test
             </button>
-            <button
+            <a href="{% url 'add-test' %}">
+              <button
               class="bg-orange-400 text-white inline-block px-4 py-[12px] font-semibold text-[18px] rounded-lg border-2 hover:bg-orange-500"
             >
               New test
             </button>
+            </a>
           </div>
         </div>
         <div
