--- a/portal/templates/portal/test-settings/add-question.html
+++ b/portal/templates/portal/test-settings/add-question.html
@@ -46,7 +46,7 @@
       >
         <div class="flex items-center flex-col w-[44px]">
           <a href="./test-ind.html">
-            <img src="../sokalp-logo.png" class="h-auto" alt="" />
+            <img src="{% static 'portal/sokalp-logo.png' %}" class="h-auto" alt="" />
           </a>
           <button class="flex items-center gap-3 font-semibold mt-10">
             <svg
