fixed some bugs

--- a/portal/templates/portal/admin_2.html
+++ b/portal/templates/portal/admin_2.html
@@ -32,8 +32,9 @@
             </svg>
             My tests
           </button>
-          <button
+          <a
             class="flex items-center gap-3 hover:text-orange-400 text-gray-500 font-semibold mt-10"
+            href='{% url "users-database" %}'
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -50,7 +51,7 @@
               />
             </svg>
             Users
-          </button>
+          </a>
           <button
             class="flex items-center gap-3 hover:text-orange-400 text-gray-500 font-semibold mt-10"
           >
