--- a/portal/templates/portal/users-database.html
+++ b/portal/templates/portal/users-database.html
@@ -35,9 +35,10 @@
         class="bg-white p-6 shadow-md fixed top-0 left-0 w-48 h-screen flex flex-col justify-between"
       >
         <div class="">
-          <img src="../sokalp.png" class="h-auto" alt="" />
-          <button
+          <a href="{% url 'admin' %}"><img src="{% static 'portal/sokalp.png' %}" class="h-auto" alt="" /></a>
+          <a
             class="flex items-center gap-3 hover:text-orange-400 text-slate-500 font-semibold mt-10"
+            href="{% url 'admin' %}"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -54,9 +55,9 @@
               />
             </svg>
             My tests
-          </button>
+          </a>
           <button
-            class="flex items-center gap-3 text-orange-400 font-semibold mt-10"
+            class="flex items-center gap-3 font-semibold mt-10"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -64,7 +65,7 @@
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-              class="w-6 h-6"
+              class="w-6 h-6 text-orange-400"
             >
               <path
                 stroke-linecap="round"
@@ -72,7 +73,7 @@
                 d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z"
               />
             </svg>
-            Users
+            <span classs='text-black'>Users</span>
           </button>
           <button
             class="flex items-center gap-3 hover:text-orange-400 text-slate-500 font-semibold mt-10"
@@ -183,7 +184,7 @@
           </h1>
 
           <div class="p-5 rounded-md border-slate-300 mb-5 border-[1px]">
-            <p>Records (32)</p>
+            <p>Records ({{users_len}})</p>
           </div>
 
           <table class="">
@@ -304,14 +305,14 @@
                     {% if user.first_name == "" %}
                       -
                     {% else %}
-                      {{user.first_name}}
+                      {{user.first_name|title}}
                     {% endif %}
                   </td>
                   <td class="px-3 py-5 text-[14px] text-gray-700">
                     {% if user.last_name == "" %}
                       -
                     {% else %}
-                      {{user.last_name}}
+                      {{user.last_name|title}}
                     {% endif %}
                   </td>
                   <td class="px-3 py-5 text-[14px] text-gray-700">
