commiting before installing tailwind

--- a/portal/templates/portal/users-database.html
+++ b/portal/templates/portal/users-database.html
@@ -152,6 +152,7 @@
           <div class="flex gap-[1.25px]">
             <button
               onclick="changeLoc()"
+              id='add-user'
               class="bg-orange-400 text-white px-4 py-[10px] font-semibold text-[16px] rounded-tr-none rounded-br-none rounded-lg hover:bg-orange-500"
             >
               Add user
@@ -398,7 +399,7 @@
               <div class="buttons mt-9 flex gap-4 self-end items-center">
                 <button
                   id="hide-modal"
-                  class="text-black px-4 py-[10px] font-semibold border-[2px] text-[16px] rounded-md hover:bg-slate-300"
+                  class="text-black px-4 py-[10px] font-semibold border-[2px] text-[16px] rounded-md hover:border-orange-400 hover:text-orange-400"
                 >
                   Cancel
                 </button>
