made some minor ui changes

--- a/portal/templates/portal/add-user.html
+++ b/portal/templates/portal/add-user.html
@@ -12,7 +12,7 @@
     <h1 class="font-semibold p-4 text-base">New user</h1>
     </div>
   </div>
-  <div class="flex items-start">
+  <div class="flex items-start mb-8 mr-4">
     <div
       class="bg-white p-6 shadow-md fixed top-0 left-0 w-[80px] h-screen flex flex-col items-center justify-between"
     >
