--- a/portal/templates/portal/test-settings/questions-manager.html
+++ b/portal/templates/portal/test-settings/questions-manager.html
@@ -7,10 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'portal/questions-manager.css' %}" />
+    <link rel="stylesheet" href="{% static 'src/styles.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'portal/favicon.png' %}">
   </head>
   <body class="bg-slate-100 tracking-wide leading-4 w-screen">
+    {% csrf_token %}
+    
     <div
       class="upper-nav-bar ml-[80px] bg-white flex justify-between items-center"
     >
@@ -288,9 +290,16 @@
           </div>
           </div>
           <div class="bg-white rounded-md flex-1 flex gap-3 items-center justify-between">
-            <div class="flex gap-4 items-center p-5">
-              <input type="checkbox" id="checkbox-1" class="size-4 p-5">
-              <label for="checkbox-1" class="font-semibold text-[13px]">QUESTIONS {{ questions_len }}</label>
+            <div class="flex gap-5 items-center p-5">
+              <input type="checkbox" class='question_check' name='question-check-all' id="checkbox-all" class="size-4 p-5">
+              <label id='selected-box' for="checkbox-1" class="font-semibold text-[13px]">QUESTIONS {{ questions_len }}</label>
+              
+              <button id='delete-btn' class='group hover:text-red-500 hidden gap-3 items-center'>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                </svg>                    
+                <span class='text-[16px]'>Delete</span>
+              </button>
             </div>
             <div class="flex items-center p-5 hover:bg-slate-200">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -302,8 +311,8 @@
             <div class="bg-white rounded-md flex-1 flex gap-2 flex-col px-2">
               <div class="flex gap-4 items-start p-5 justify-between">
                 <div class="flex gap-4">
-                  <input type="checkbox" id="checkbox-1" class="size-4">
-                  <label for="checkbox-1" class="font-semibold text-[16px]">Q. {{forloop.counter}}</label>
+                  <input type="checkbox" class='question_check' name='question_check' id="{{question.id}}" class="size-4">
+                  <label for="{{question.id}}" class="font-semibold text-[18px]">Q. {{forloop.counter}}</label>
                 </div>
                 <p class="text-slate-500">Points: 1</p>
               </div>
@@ -338,6 +347,10 @@
               </div>
             </div>
           {% endfor %}
+          <script>
+            const test_id = {{tests.id}}
+          </script>
+          <script src='{% static "portal/questions-manager.js" %}'></script>
     </div>
   </body>
 </html>
